--- a/src/configs/agent.yaml
+++ b/src/configs/agent.yaml
@@ -5,7 +5,7 @@
 name: flexo
 history_limit: 4
 logging_level: INFO
-max_streaming_iterations: 2 # Number of times the agent is allowed to return to streaming (e.g. after tools execution)
+max_streaming_iterations: 3 # Number of times the agent is allowed to return to streaming (e.g. after tools execution)
 
 # Response timeouts
 timeouts:
@@ -43,8 +43,8 @@ use_vendor_chat_completions: false    # Options: true, false
 models_config:
   main_chat_model:
     # WatsonX Configuration
-    vendor: watsonx-llama    # Options: watsonx-llama/granite/mistral, openai, anthropic, mistral-ai
-    model_id: meta-llama/llama-3-3-70b-instruct  # Other options: mistralai/mistral-large, meta-llama/llama-3-405b-instruct, ibm/granite-3-8b-instruct
+    vendor: watsonx-granite # Options: watsonx-llama/granite/mistral, openai, anthropic, mistral-ai
+    model_id: ibm/granite-3-8b-instruct # Other options: mistralai/mistral-large, meta-llama/llama-3-405b-instruct, ibm/granite-3-8b-instruct
     decoding_method: greedy
     max_new_tokens: 4000
 
